--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -107,11 +107,12 @@
                         <a class="collapse-item" href="{{ url_for('estadocita.estadocitaIndex') }}">Estado de la Cita</a> 
                         <a class="collapse-item" href="{{ url_for('especialidad.especialidadIndex') }}">Especialidad</a>   
                         <a class="collapse-item" href="{{ url_for('dia.diaIndex') }}">Dia</a> 
-                        <a class="collapse-item" href="#">11-turno</a> 
-                        <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">12-duracion de consulta</a> 
-                        <a class="collapse-item" href="#">13-</a> 
-                        <a class="collapse-item" href="#">14-</a> 
-                        <a class="collapse-item" href="#">15-</a> 
+                        <a class="collapse-item" href="{{ url_for('diagnostico.diagnosticoIndex') }}">Diagnóstico</a> 
+                        <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">Duracion de consulta</a> 
+                        <a class="collapse-item" href="#">_____________________</a> 
+                        <a class="collapse-item" href="#">Test Utilizados</a> 
+                        <a class="collapse-item" href="#">Tratamientos</a> 
+                        <a class="collapse-item" href="#">turno</a> 
                     </div>
                 </div>
             </li>
