--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -109,10 +109,11 @@
                         <a class="collapse-item" href="{{ url_for('dia.diaIndex') }}">Dia</a> 
                         <a class="collapse-item" href="{{ url_for('diagnostico.diagnosticoIndex') }}">Diagnóstico</a> 
                         <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">Duracion de consulta</a> 
+                        <a class="collapse-item" href="{{ url_for('turno.turnoIndex') }}">turno</a>
                         <a class="collapse-item" href="#">_____________________</a> 
                         <a class="collapse-item" href="#">Test Utilizados</a> 
                         <a class="collapse-item" href="#">Tratamientos</a> 
-                        <a class="collapse-item" href="#">turno</a> 
+                         
                     </div>
                 </div>
             </li>
