--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -112,7 +112,7 @@
                         <a class="collapse-item" href="{{ url_for('turno.turnoIndex') }}">turno</a>
                         <a class="collapse-item" href="#">_____________________</a> 
                         <a class="collapse-item" href="#">Test Utilizados</a> 
-                        <a class="collapse-item" href="#">Tratamientos</a> 
+                        <a class="collapse-item" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamientos</a> 
                          
                     </div>
                 </div>
