--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -111,7 +111,7 @@
                         <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">Duracion de consulta</a> 
                         <a class="collapse-item" href="{{ url_for('turno.turnoIndex') }}">turno</a>
                         <a class="collapse-item" href="#">_____________________</a> 
-                        <a class="collapse-item" href="#">Test Utilizados</a> 
+                        <a class="collapse-item" href="{{ url_for('instrumento.instrumentoIndex') }}">Test Utilizados</a> 
                         <a class="collapse-item" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamientos</a> 
                          
                     </div>
