feat:unificacion de estilos

--- a/app/rutas/referenciales/index/templates/index-index.html
+++ b/app/rutas/referenciales/index/templates/index-index.html
@@ -142,21 +142,23 @@ Inicio
    
     <body>
         <div class="button-container">
-            <a class="large-button" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
-            <a class="large-button" href="{{ url_for('pais.paisIndex') }}">País</a>
-            <a class="large-button" href="{{ url_for('estadocita.estadocitaIndex') }}">Estado de la Cita</a> 
-            <a class="large-button" href="{{ url_for('especialidad.especialidadIndex') }}">Especialidad</a>   
-            <a class="large-button" href="{{ url_for('dia.diaIndex') }}">Dia</a> 
             <a class="large-button" href="{{ url_for('persona.personaIndex') }}">Persona</a>
-            <a class="large-button" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupacion</a>
-            <a class="large-button" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
+            <a class="large-button" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupación</a>
             <a class="large-button" href="{{ url_for('estadocivil.estadocivilIndex') }}">Estado Civil</a>
             <a class="large-button" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
-            <a class="large-button" href="#">Botón 11</a>
-            <a class="large-button" href="#">Botón 12</a>
-            <a class="large-button" href="#">Botón 13</a>
-            <a class="large-button" href="#">Botón 14</a>
-            <a class="large-button" href="#">Botón 15</a>
+            <a class="large-button" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
+            <a class="large-button" href="{{ url_for('pais.paisIndex') }}">País</a>
+            <a class="large-button" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
+            <a class="large-button" href="{{ url_for('estadocita.estadocitaIndex') }}">Estado de la Cita</a>
+            <a class="large-button" href="{{ url_for('especialidad.especialidadIndex') }}">Especialidad</a>
+            <a class="large-button" href="{{ url_for('dia.diaIndex') }}">Día</a>
+            <a class="large-button" href="{{ url_for('diagnostico.diagnosticoIndex') }}">Diagnóstico</a>
+            <a class="large-button" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">Duración de consulta</a>
+            <a class="large-button" href="{{ url_for('turno.turnoIndex') }}">Turno</a>
+            <a class="large-button" href="{{ url_for('instrumento.instrumentoIndex') }}">Test Utilizados</a>
+            <a class="large-button" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamientos</a>
+            
+            
         </div>
 
     
