--- a/app/rutas/referenciales/turno/templates/turno-index.html
+++ b/app/rutas/referenciales/turno/templates/turno-index.html
@@ -50,7 +50,7 @@ Turnos
           <!-- Modal footer -->
           <div class="modal-footer">
             <button type="button" class="btn btn-outline-success" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-outline-warning" data-dismiss="modal">Cerrar</button>
           </div>
 
         </div>
@@ -81,7 +81,7 @@ Turnos
         { data: 'descripcion' },
         { data: function(row) {
             return `<button type="button" name="btn_editar" class="btn btn-primary" data-id="${row.id}">Editar</button>
-                    <button type="button" name="btn_eliminar" class="btn btn-danger" data-id="${row.id}">Eliminar</button>`
+                    <button type="button" name="btn_eliminar" class="btn btn-warning" data-id="${row.id}">Eliminar</button>`
           }
         }
       ]
