--- a/app/rutas/referenciales/index/templates/perfil_usuario.html
+++ b/app/rutas/referenciales/index/templates/perfil_usuario.html
@@ -73,11 +73,11 @@ Correos
     </div>
     <div class="profile-info">
         <h3>Información del Perfil</h3>
-        <p><strong>Nombre Completo:</strong> Juan Pérez</p>
-        <p><strong>Email:</strong> juan.perez@example.com</p>
-        <p><strong>Teléfono:</strong> +123 456 7890</p>
+        <p><strong>Nombre Completo:</strong> _</p>
+        <p><strong>Email:</strong> correo electrónico</p>
+        <p><strong>Teléfono:</strong> numero de telefono</p>
         <p><strong>Ubicación:</strong> Ciudad, País</p>
-        <p><strong>Biografía:</strong> Desarrollador web apasionado por la tecnología y la innovación.</p>
+        <p><strong>Biografía:</strong> Aqui va la biografia</p>
     </div>
     <a href="editar_perfil.html" class="edit-button">Editar Perfil</a>
 </div>
