--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,7 +82,15 @@
                         <a class="collapse-item" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
                         
                         <a class="collapse-item" href="#">_____________________</a> 
-
+                        <a class="collapse-item" href="{{ url_for('estadocita.estadocitaIndex') }}">Estado de la Cita</a> 
+                        <a class="collapse-item" href="{{ url_for('especialidad.especialidadIndex') }}">Especialidad</a>   
+                        <a class="collapse-item" href="{{ url_for('dia.diaIndex') }}">Dia</a> 
+                        <a class="collapse-item" href="{{ url_for('diagnostico.diagnosticoIndex') }}">Diagnóstico</a> 
+                        <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">Duracion de consulta</a> 
+                        <a class="collapse-item" href="{{ url_for('turno.turnoIndex') }}">turno</a>
+                        <a class="collapse-item" href="{{ url_for('instrumento.instrumentoIndex') }}">Test Utilizados</a> 
+                        <a class="collapse-item" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamientos</a> 
+                         
                         <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
                         <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">Pais</a>
                         <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
@@ -104,17 +112,9 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{{ url_for('estadocita.estadocitaIndex') }}">Estado de la Cita</a> 
-                        <a class="collapse-item" href="{{ url_for('especialidad.especialidadIndex') }}">Especialidad</a>   
-                        <a class="collapse-item" href="{{ url_for('dia.diaIndex') }}">Dia</a> 
-                        <a class="collapse-item" href="{{ url_for('diagnostico.diagnosticoIndex') }}">Diagnóstico</a> 
-                        <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">Duracion de consulta</a> 
-                        <a class="collapse-item" href="{{ url_for('turno.turnoIndex') }}">turno</a>
-                        <a class="collapse-item" href="#">_____________________</a> 
-                        <a class="collapse-item" href="{{ url_for('instrumento.instrumentoIndex') }}">Test Utilizados</a> 
-                        <a class="collapse-item" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamientos</a> 
-                         
+                        <a class="collapse-item" href="#"></a> 
                     </div>
+
                 </div>
             </li>
 
