--- a/app/rutas/referenciales/persona/templates/persona-agregar.html
+++ b/app/rutas/referenciales/persona/templates/persona-agregar.html
@@ -14,6 +14,14 @@ Formulario Agregar Persona
         <label for="txtApellido">Apellido:</label>
         <input type="text" class="form-control" placeholder="Ingrese su apellido" id="txtApellido" required>
     </div>
+    <div class="form-group">
+        <label for="txtCedula">Cedula:</label>
+        <input type="text" class="form-control" placeholder="Ingrese sus numero de cedula" id="txtCedula" required>
+    </div>
+    <div class="form-group">
+      <label for="TxtFechanac">Fecha de Nacimiento:</label>
+      <input type="date" class="form-control" id="Fechanac">
+    </div>
     <button type="submit" class="btn btn-primary">Agregar</button>
 </form>
 {% endblock %}
