--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,8 +62,30 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                primaryrmaciones
             </div>
+
+
+
+
+ <!-- Nav Item - Utilities Collapse Menu -->
+ <li class="nav-item">
+    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+        aria-expanded="true" aria-controls="collapseUtilities">
+        <i class="fas fa-fw fa-wrench"></i>
+        <span class="text-wrap">Gestion Agendamiento</span>
+    </a>
+    <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+        data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+            <a class="collapse-item" href="#"></a> 
+        </div>
+
+    </div>
+</li>
+
+
+
+
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
@@ -74,14 +96,10 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-
-
                         <a class="collapse-item" href="{{ url_for('persona.personaIndex') }}">Persona</a>
                         <a class="collapse-item" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupación</a> 
                         <a class="collapse-item" href="{{ url_for('estadocivil.estadocivilIndex') }}">Estado Civil</a>
                         <a class="collapse-item" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
-                        
-                        <a class="collapse-item" href="#">_____________________</a> 
                         <a class="collapse-item" href="{{ url_for('estadocita.estadocitaIndex') }}">Estado de la Cita</a> 
                         <a class="collapse-item" href="{{ url_for('especialidad.especialidadIndex') }}">Especialidad</a>   
                         <a class="collapse-item" href="{{ url_for('dia.diaIndex') }}">Dia</a> 
@@ -89,34 +107,18 @@
                         <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">Duracion de consulta</a> 
                         <a class="collapse-item" href="{{ url_for('turno.turnoIndex') }}">turno</a>
                         <a class="collapse-item" href="{{ url_for('instrumento.instrumentoIndex') }}">Test Utilizados</a> 
-                        <a class="collapse-item" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamientos</a> 
-                         
+                        <a class="collapse-item" href="{{ url_for('tratamiento.tratamientoIndex') }}">Tratamientos</a>   
                         <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
                         <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">Pais</a>
                         <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
-                 
-                   
-
-
                     </div>
                 </div>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span class="text-wrap">Gestionar Agendamiento</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="#"></a> 
-                    </div>
 
-                </div>
-            </li>
+
+
+            
 
             <!-- Divider -->
             <hr class="sidebar-divider">
